# dissolution-vst

./: BUILD.md  CMakeLists.txt
.github/workflows/: build-macos.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: BitCrusher.cpp  BitCrusher.h  FeedbackMatrix.cpp  FeedbackMatrix.h  FuzzEngine.cpp  FuzzEngine.h  ShimmerReverb.cpp  ShimmerReverb.h  SpectralFreeze.cpp  SpectralFreeze.h
